--- a/bug/application-dev.yml
+++ b/bug/application-dev.yml
@@ -8,7 +8,13 @@ spring:
     import: "configserver:"
   cloud:
     config:
-      uri: https://github.com/kevindeyne-ab/sample-config-repo.git
+      uri: http://localhost:8080
+      fail-fast: true
+      retry:
+        initial-interval: 1500
+        max-attempts: 6
+        max-interval: 15000
+        multiplier: 1.2
   profiles:
     active: dev
 
