--- a/bug/application-dev.yml
+++ b/bug/application-dev.yml
@@ -10,11 +10,11 @@ spring:
     config:
       uri: http://localhost:8080
       fail-fast: true
-      retry:
-        initial-interval: 1500
-        max-attempts: 6
-        max-interval: 15000
-        multiplier: 1.2
+      #retry:
+        #initial-interval: 1500
+        #max-attempts: 6
+        #max-interval: 15000
+        #multiplier: 1.2
   profiles:
     active: dev
 
